fix font unaligned

--- a/src/app/shared/components/memory-table/memory-table.component.css
+++ b/src/app/shared/components/memory-table/memory-table.component.css
@@ -1,3 +1,7 @@
+* {
+  font-size: 18px;
+}
+
 tbody:hover,
 tr.hover,
 th.hover,
