--- a/src/styles.css
+++ b/src/styles.css
@@ -30,3 +30,7 @@ div {
 .lineGothic {
     font-family: LineGothic;
 }
+
+.size18 {
+    font-size: 18px;
+}
